# OasisView

./: .gitignore  README.md
OASISView/: CMakeLists.txt  CMakeLists.txt.user.51e1602  ILTDialog.cpp  ILTDialog.h  ILTThread.cpp  ILTThread.h  MainWindow.cpp  MainWindow.h  MaskDataViewDialog.cpp  MaskDataViewDialog.h  OASISView.cpp  OASISView.h  Simulation1DDialog.cpp  Simulation1DDialog.h  Simulation1DResultdialog.cpp  Simulation1DResultdialog.h  SimulationSelectionDialog.cpp  SimulationSelectionDialog.h  main.cpp  simulationdialog.cpp  simulationdialog.h
OASISView/.qtcreator/: CMakeLists.txt.user.4681e2d
OASISView/OASISParser/: OASISCellRecords.cpp  OASISCellRecords.h  OASISCells.cpp  OASISCells.h  OASISData.cpp  OASISData.h  OASISElement.h  OASISElementParser.cpp  OASISElementParser.h  OASISParserException.h  OasisCellRecords.cpp  OasisCellRecords.h
OASISView/Simulator/: Simulator.cpp  Simulator.h  cuSimulator.cpp  cuSimulator.h
build-OASISView-Desktop-Debug/: CMakeCache.txt  Makefile  OASISView  cmake_install.cmake
build-OASISView-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-f0d75cfce753f11d1ea2.json  codemodel-v2-9d305a59b9a9349a89dc.json  index-2026-04-05T06-01-31-0287.json  target-OASISView-Debug-a3dc7d5a593c442d351e.json  target-OASISView_autogen-Debug-60a533434a2c8ed4ed51.json
build-OASISView-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-cbf4bc27b54a2056a9c9.json  codemodel-v2-6497632d9f1ef2a8bd67.json  index-2026-04-05T05-55-03-0393.json  target-OASISView-Debug-15425325aa93fefa481b.json
build-OASISView-Desktop-Debug/OASISView_autogen/: moc_predefs.h
build-OASISView-Desktop-Debug/OASISView_autogen/EWIEGA46WW/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
